--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -54,3 +54,27 @@ input::placeholder, textarea::placeholder{
     background-color: tomato;
     cursor: pointer;
 }
+
+.button{
+    border: none;
+    padding: 5px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.logout{
+    background-color: tomato;
+}
+.login{
+    background-color: #00A8A8;
+    margin-right: 10px;
+}
+.register{
+    background-color: #998DDD;
+}
+
+.buttons, .logout{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
